--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  height: 100%;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
+  line-height: 24px;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+
+  background: linear-gradient(180deg, #202738 0, #070816 100%);
+  background-image: linear-gradient(rgb(32, 39, 56) 0px, rgb(7, 8, 22) 100%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
