--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  height: 100%;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -8,6 +7,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
 
+  min-height: 100%;
   background: linear-gradient(180deg, #202738 0, #070816 100%);
   background-image: linear-gradient(rgb(32, 39, 56) 0px, rgb(7, 8, 22) 100%);
 
